--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <nav class="navbar navbar-expand-lg fixed-top custom-navbar">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="#">
-                <img src="img/logo.jpg" alt="Nur Alip Logo" class="navbar-logo">
+                <img src="img/logo.png" alt="Nur Alip Logo" class="navbar-logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -395,4 +395,5 @@
     <!-- Custom JS -->
     <script src="script.js"></script>
 </body>
+
 </html>
