--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 </a>
                             </div>
                             <div class="social-links mt-5">
-                                <a href="https://www.instagram.com/nuralip.114" target="_blank" class="social-link">
+                                <a href="https://www.instagram.com/alipp.114?igsh=ZWFlcDRtNnp6ZDB5" target="_blank" class="social-link">
                                     <i class="bi bi-instagram"></i>
                                 </a>
                                 <a href="https://wa.me/6285795939763" target="_blank" class="social-link">
@@ -397,4 +397,5 @@
 </body>
 
 </html>
+
 
